src/objects/CHN_Members__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optum_Segment_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Optum Segment Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>POP ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EFS Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Optum_Segment_Id__c</columns>
        <columns>Policy_ID__c</columns>
        <columns>POP_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EFS Members Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EFS Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>